--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/index.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/index.html
@@ -61,7 +61,7 @@ a.btn_login { width:90%; display:block; line-height:44px; height:44px; text-alig
 			</div>
 			<div class="btnline_1">
 				<span class="fl ml20">
-					<a href="${request.contextPath}/resource/changpassword/changpassword.html">忘记密码了？</a>
+					<a href="${request.contextPath}/register/changPassword_1">忘记密码了？</a>
 				</span>
 				<span class="fr mr20">
 					<a href="${request.contextPath}/register/reg_1">新用户注册</a>
