--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/system/userInfo/userCenter_2.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/system/userInfo/userCenter_2.html
@@ -50,7 +50,7 @@
 		<div class="myinfo2 mt15">
 			<ul>
 				<li><span class="fl">身份证</span> <span class="fr">
-						${data.idCard!''}
+						${userInfo.idCard!''}
 						<A href="" class="f_red" style="display: none;">立刻验证</A>
 					</span></li>
 				<li><span class="fl">银行卡</span> <span class="fr">
