--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/system/index2.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/system/index2.html
@@ -71,7 +71,7 @@
 		<div class="bottombtn">
 			<div class="p15">
 				<div class="midbtn">
-					<a href="${request.contextPath}/system/houseInfo/houseManage_2">管理丰源</a>
+					<a href="${request.contextPath}/system/houseInfo/houseManage_2">管理房源</a>
 				</div>
 			</div>
 		</div>
