--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/system/order/orderInfo_1.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/system/order/orderInfo_1.html
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 		<div class="botline">
-			<a href="" class="btn_c1">提供服务</a>
+			<a href="javascript:alert('正在开发。。');" class="btn_c1">提供服务</a>
 			<a href="${request.contextPath}/system/order/get/${houseInfo.id}/orderInfo_2" class="btn_c2" style="float: right;">详细信息</a>
 		</div>
 	</div>
