--- a/freehelp-webchat/src/main/webapp/WEB-INF/view/register/reg_1.html
+++ b/freehelp-webchat/src/main/webapp/WEB-INF/view/register/reg_1.html
@@ -13,7 +13,7 @@
 	$(function() {
 		$("#submit").click(function() {
 			var phone = $("input[name='phone']");
-			if (!/^0{0,1}(13[0-9]|15[7-9]|153|156|18[7-9])[0-9]{8}$/.test(phone.val()) || phone.val().length != 11) {
+			if (/* !/^0{0,1}(13[0-9]|15[7-9]|153|156|18[7-9])[0-9]{8}$/.test(phone.val()) || */ phone.val().length != 11) {
 				//提示输入不对
 				alert("请输入正解手机号码");
 				return;
